traces/bug_42.txt
examples++-load/bmo.cpp:51: error: DEAD_STORE
  The value written to &r (type long) is never used.
Showing all 1 steps of the trace


examples++-load/bmo.cpp:51:3: Write of unused value
49.   #else
50.       //  srandom(ii);
51.     long r=random();
        ^
52.     r=random();
53.     const unsigned long rmax= (1UL<<31)-1;
